<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:elevation="16dp"
    app:cardCornerRadius="16dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_background"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="2dp">

            <TextView
                android:id="@+id/text_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/cardView_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tranx_id"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/text_view_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/text_view_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>